Tue Dec  3 23:26:55 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed founder key sending in CMODE command in client.
	  Affected file lib/silcclient/command.c.

	* Fixed CUMODE founder authentication in server to not check
	  for client's public key since it's not supposed to do that.
	  Affected file silcd/command.c.

Tue Dec  3 12:02:41 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Set realname and hostname in NICK_REC records. Affected file
	  irssi/src/silc/core/silc-nicklist.c

Mon Dec  2 20:50:20 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Remove 1.0 protocol backwards compat code from client
	  library.

	* Added more reliable check for whether nickname did change
	  or not, or whether only Client ID changed in NICK_CHANGE
	  notify.  Affected file lib/silcclient/client_notify.c.
	  Fixes bug in '@' character handling in a nickname.

	* Added support for automatically parsing signature from
	  the message payload.  Added new function
	  silc_message_get_signature to return the payload to
	  application.  Affected files lib/silccore/silcmessage.[ch].

	* Changed the private_message and channel_message client
	  operations to deliver the SilcMessagePayload to the
	  application too.  Application can use it fe. to get the
	  signature from the message for verification.  Affected
	  file lib/silcclient/silcclient.h, client_channel.c and
	  client_prvmsg.c.

	* Redefined the signed payload for message payloads.
	  Updated protocol specs and implemented.

Mon Dec  2 16:28:29 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed wrong invite and ban list handling in server command
	  reply.  Affected files are silcd/command_reply.c,
	  silcd/server_util.[ch].

Sun Dec  1 20:48:17 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed CMODE setting in server when founder mode was set.
	  Affected file silcd/command.c.  Bug #95.

	* Added support to setting specific public key in CMODE in